# MyProjects

OpenGL1/: CMakeLists.txt  Display.cpp  Display.h  Frag.fs  Frag1.fs  Vertex.vs  main.cpp
OpenGL2/: CMakeLists.txt  main.cpp
Parc/: Adaline.py  AdalineSGD.py  Neur.py
SDL/: CMakeLists.txt  Display.cpp  Display.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  main.cpp
SDL/res/: basicShader.fs  basicShader.vs.txt
Vulkan/: CMakeLists.txt  Platform.cpp  Platform.h  Render.cpp  Render.h  Shared.cpp  Shared.h  Window.cpp  Window.h  Window_wnd32.cpp  Window_wnd32.h  main.cpp
diploma project/: design.py  design_v2.py  language_detect.py  main.py  scrap.py  translation_model.py  untitled.ui
pytorch/: PyTorch ResNet.py  Pytorch MNIST.ipynb  Torch 1.py  Torch Wine.py
web_site_1/: manage.py
web_site_1/MainPage/: urls.py  views.py
web_site_1/MainPage/migrations/: 0002_auto_20181216_1737.py
web_site_1/MainPage/static/css/: PostStyle.css
web_site_1/MainPage/templates/MainPage/: ChangePassword.html  InfoList.html  MainInfo.html  NewsFormCreating.html  Post.html  PostList.html  UserProfile.html  UserProfile_edit.html  WebPage_Info.html  account_activate_invalid.html  account_activation_email.html  account_activation_sent.html  index.html  signup.html
web_site_1/diploma_project_1/: urls.py  wsgi.py
web_site_1/diploma_project_1/templates/registration/: password_reset_complite.html  password_reset_email.html
web_site_1/diploma_project_1/templates/templates/registration/: password_reset_done.html  password_reset_email.html  password_reset_form.html
website project/: db.sqlite3
website project/MainPage/: admin.py  forms.py  models.py
website project/MainPage/migrations/: 0001_initial.py  0003_postcomment.py
website project/MainPage/static/css/: WebPage_own.css  post.css
website project/diploma_project_1/: settings.py
website project/diploma_project_1/templates/registration/: login.html
website project/diploma_project_1/templates/templates/registration/: login.html  password_reset_confirm.html
